--- a/dnsbin/supervisor.conf
+++ b/dnsbin/supervisor.conf
@@ -1,6 +1,6 @@
 [program:dnsbin]
 #https://www.codingforentrepreneurs.com/blog/hello-linux-setup-gunicorn-and-supervisor/
-user=surf
+user=dnsbin
 directory=/home/dns/dnsbin
 command=python3 dnsbin.py --port 8853 --udp --tcp
 
